# ffmpeg-rs-raw

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
examples/: main.rs
src/: audio_fifo.rs  decode.rs  demux.rs  encode.rs  filter.rs  frame.rs  lib.rs  mux.rs  muxer.rs  resample.rs  scale.rs  slimbox.rs  stream_info.rs  transcode.rs
