[package]
name = "ffmpeg-rs-raw"
version = "0.1.0"
edition = "2024"
repository = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git"
authors = ["Kieran"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.91"
ffmpeg-sys-the-third = { git = "https://git.v0l.io/Kieran/ffmpeg-the-third.git", rev = "3059cf6666e0b2d6eaeea00224c25cc95fad5b4a" }
libc = { version = "0.2.175" }
slimbox = { git = "https://github.com/v0l/slimbox", rev = "807c88212532732ead03e925c4788533aeb8f196" }
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
rlimit = "0.10.2"
