[package]
name = "ffmpeg-rs-raw"
version = "0.3.0"
edition = "2024"
repository = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git"
authors = ["Kieran"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1"
ffmpeg-sys-the-third = { git = "https://github.com/v0l/ffmpeg-the-third.git", rev = "f6209599c7daff25eb8fcd0c335e9f5c9ec52244" }
libc = { version = "0.2" }
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
rlimit = "0.10"
